# okots-os

./: .gitignore  Cargo.toml  Makefile.toml  SECURITY.md  TODO.md  build.rs  init.sh  readme.md  run.sh  rust-toolchain.toml
.cargo/: config.toml
local_macros/: Cargo.toml
local_macros/src/: lib.rs
raw_contents/: compress_ucode.sh
scripts/: build_iso.sh  internal_init_script.sh  run.sh
src/: app_ffi.rs  main.rs  send_and_get.rs  util_types.rs
src/acpi/: aml.rs  core.rs  handler.rs  mod.rs
src/apic_helper/: mod.rs
src/arch/x86_64/: trampoline.asm
src/asy_nc/: mod.rs
src/cpu/: cpu_id.rs  mod.rs  msr.rs  utils.rs
src/cpu/mitigation/: mod.rs
src/cpu/mitigation/ucode/: mod.rs
src/cpu_flags/: mod.rs
src/drivers/disk/: mod.rs
src/drivers/disk/virt_io/: mod.rs
src/fonts/: mod.rs
src/fs/: mod.rs
src/interrupt/: api.rs  raw.rs
src/io/console/: gop.rs  mod.rs  serial.rs
src/logger/: core.rs  mod.rs  utils.rs
src/manager/: display_manager.rs  load_task_manager.rs  memory_manager.rs  mod.rs
src/mem/: map.rs  smart_ptr.rs  thread_safe.rs
src/mem/allocator/: frame_boundary_tag.rs  slab.rs
src/mem/paging/: types.rs
src/memory/: paging.rs  physical_allocator.rs
src/multi_core/init/: raw.rs
src/result/: types.rs
src/simd/: mod.rs
src/thread_local/: mod.rs
src/timer/: mod.rs  rtc.rs  tsc.rs
src/uefi_helper/: boot.rs
src/util/: debug.rs  lapic.rs  logger.rs  mod.rs  proto.rs  result.rs  timer.rs
src/util/helper/: interrupt.rs  shell.rs
src/util/mem/: map.rs  mod.rs  smart_ptr.rs  thread_safe.rs  types.rs
src/version/: core.rs  io.rs  rhai.rs  seride.rs  types.rs
(+4 files in other folders)
