[package]
name = "test_os_v2"
version = "0.1.0"
edition = "2024"

[features]
_internal_debug = ["disable-check", "debug-mode"]

disable-check = []
debug-mode = []

[dependencies]
uefi = { version = "0.36.1", features = ["alloc", "logger"], default-features = false }
uefi-raw = "0.13.0"
bincode = { version = "2.0.1", default-features = false, features = ["alloc", "serde"] }
fontdue = { version = "0.9.3", default-features = false, features = ["hashbrown"] }
rustybuzz = { version = "0.20.1", default-features = false }
spin = "0.10.0"
bitflags = "2.10.0"
miniz_oxide = { version = "0.9.0", default-features = false, features = ["with-alloc"] }
proc-bitfield = { version = "0.5.3", default-features = false, features = ["nightly"] }
num-traits = {version = "0.2.19", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
x86_64 = { version = "0.15.4", features = ["instructions", "nightly"] }
libm = { version = "0.2.16", default-features = false, features = ["arch"] }
uart_16550 = { version = "0.4.0", default-features = false, features = ["stable"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[target.'cfg(all(target_arch = "x86_64", target_os = "none"))']
rustflags = [
    "-Z", "cf-protection=full",
    "-C", "relocation-model=pic",
    "-C", "target-cpu=x86-64-v2",     # スラッシュを削除
    "-C", "target-feature=+sse2",
    "-C", "no-redzone=y",             # UEFI/カーネルでは必須
    "-C", "panic=abort",              # unwindingは通常使えないため
]